# actions-init-deps-py

./: README.md  action.yml  pyproject.toml
.github/workflows/: test-cache-invalid.yml  test-cache.yml  test-defaults.yml  test-failure.yml  test-install-cmd.yml  test-installed-deps.yml  test-postargs.yml  test-versions.yml
tests/test-cache/: pyproject.toml
tests/test-defaults/: pyproject.toml
tests/test-postargs/: pyproject.toml
